# social-gaming

./: .gitignore  CMakeLists.txt  CODEOWNERS  Makefile  README.md  social_gaming_platform.drawio
app/: CMakeLists.txt  main.cpp  social-gaming.cpp
app/client/: CMakeLists.txt
app/client-manager/: CMakeLists.txt
app/client-manager/lib/: CMakeLists.txt  ChatWindow.cpp  ClientManager.cpp
app/client-manager/lib/include/: ChatWindow.h  ClientManager.h
app/client-manager/test/: CMakeLists.txt  clientManagerTests.cpp
app/client-platform/: CMakeLists.txt  ClientPlatform.cpp
app/client-server-communication/: CMakeLists.txt
app/client-server-communication/tools/client/: client_comm.cpp
app/client/lib/User/: CMakeLists.txt  client.cpp
app/client/test/: CMakeLists.txt  userTests.cpp
app/core-game-engine/: CMakeLists.txt
app/core-game-engine/lib/: CMakeLists.txt  configuration.cpp  game.cpp  gameLibrary.cpp  interpreter.cpp  main.cpp  rules.cpp  treeParser.cpp  util.cpp
app/core-game-engine/lib/game-state/: CMakeLists.txt  configurationState.cpp  gameState.cpp
app/core-game-engine/lib/include/: DTO.h  configuration.h  game.h  interpreter.h  treeParser.h  util.h
app/core-game-engine/lib/static-game-data/: CMakeLists.txt  configuration.cpp  gameLibrary.cpp  perAudience.cpp  perPlayer.cpp  staticGameData.cpp
app/core-game-engine/test/: CMakeLists.txt  configurationTests.cpp  constantsTests.cpp  gameLibraryTests.cpp  gameStateTests.cpp  gameTests.cpp  interpreterTests.cpp  perAudienceTests.cpp  perPlayerTests.cpp  staticGameDataTests.cpp  treeParserTests.cpp  variablesTests.cpp
app/core-game-engine/test/test-game-files/: rock-paper-scissors.game
app/depricated/client/: CMakeLists.txt  local_play_rps.py  main.cpp  user_main.cpp
app/depricated/client/lib/: CMakeLists.txt
app/depricated/client/test/: CMakeLists.txt  dummyServerTests.cpp  socialGameFileHandlerTests.cpp  testClient.cpp  testSocialGameFileHandler.cpp
app/depricated/server/: CMakeLists.txt  MessageHandler.cpp  README.md  server.py
app/depricated/server/MessageHandler/: CMakeLists.txt
app/depricated/server/test/: CMakeLists.txt  testMessageHandler.cpp
app/game-container/: CMakeLists.txt  DTO.h  README.md  gameContainer.cpp
app/game-container-manager/: CMakeLists.txt  README.md  main.cpp  serverProcessor.cpp
app/game-container-manager/lib/: CMakeLists.txt  gameContainerManager.cpp  gamesDataManager.cpp  serverProcessors.cpp
app/game-container-manager/lib/include/: ClientToServerDataObject.h  ProcessorBase.h  ServerToClientsDataObject.h  gameContainerManager.h  gamesDataManager.h  processors.h  serverProcessors.h
app/game-container-manager/test/: CMakeLists.txt  gameContainerManagerTests.cpp
app/game-container/lib/: CMakeLists.txt  gameContainer.cpp  gameState.cpp
app/game-container/lib/include/: DTO.h  configurationState.h  deserializer.h  gameContainer.h  gameContainerManager.h  gameState.h
app/game-container/test/: CMakeLists.txt  gameContainerTests.cpp
app/message-processors/: CMakeLists.txt
app/message-processors/lib/: CMakeLists.txt
app/message-processors/lib/processors/: CMakeLists.txt  messageProcessor.cpp
app/message-processors/test/: CMakeLists.txt  messageProcessorsTests.cpp
app/networking/: CMakeLists.txt
app/server/: CMakeLists.txt
app/server-manager/: CMakeLists.txt
app/server-manager/lib/: CMakeLists.txt  ServerManager.cpp
app/server-manager/test/: CMakeLists.txt  serverManagerTests.cpp
app/server-platform/: CMakeLists.txt  ServerPlatform.cpp
app/server/MessageHandler/: CMakeLists.txt  MessageHandler.cpp
app/server/lib/Game/: CMakeLists.txt
client-server-communication/: CMakeLists.txt  server_main.cpp  spike_server.cpp
client-server-communication/lib/server/: CMakeLists.txt  Server.cpp
client-server-communication/server/: CMakeLists.txt  main_server.cpp
client-server-communication/tools/client/: CMakeLists.txt  client_comm.cpp
client-server-communication/tools/server/: main_server.cpp
client/lib/SocialGameFileHandler/: CMakeLists.txt  socialgamefilehandler.cpp
client/lib/User/: CMakeLists.txt  client.cpp
clientSource/: CMakeLists.txt  README.md  client.cpp  main.cpp  user_main.cpp
clientSource/controller/: controller.cpp
clientSource/controller/include/: controller.h
clientSource/lib/DummyServer/: CMakeLists.txt  dummyserver.cpp
clientSource/lib/GameRoom/: CMakeLists.txt
clientSource/lib/SocialGameFileHandler/: socialgamefilehandler.cpp
clientSource/lib/User/: user.cpp
clientSource/model/: CMakeLists.txt
clientSource/model/include/: game.h  gameroom.h  user.h
clientSource/model/lib/: game.cpp  gameroom.cpp  user.cpp
core-game-engine/lib/: CMakeLists.txt  configuration.cpp  constants.cpp  demo.cpp  game.cpp  gameLibrary.cpp  interpreter.cpp  main.cpp  rockPaperScissors.socialGaming  treeParser.cpp  variables.cpp
core-game-engine/lib/core-game-engine/: AllSymbols.txt  CMakeLists.txt  configuration.cpp  constants.cpp  demo.cpp  game.cpp  gameLibrary.cpp  interpreter.cpp  main.cpp  perAudience.cpp  perPlayer.cpp  rules.cpp  treeParser.cpp  util.cpp  variables.cpp
core-game-engine/lib/game-state/: configurationState.cpp
core-game-engine/lib/include/: configuration.h  constants.h  game.h  gameLibrary.h  interpreter.h  mapping.h  perAudience.h  perPlayer.h  treeParser.h  variables.h
core-game-engine/test/: CMakeLists.txt  configurationTests.cpp  constantsTests.cpp  contantsTests.cpp  gameLibraryTests.cpp  gameTests.cpp  interpreterTests.cpp  perAudienceTests.cpp  perPlayerTests.cpp  rulesTests.cpp  treeParserTests.cpp  variablesTests.cpp
gameContainerManager/: CMakeLists.txt  README.md  main.cpp  serverProcessor.cpp  serverProcessorDTO.h  testServerProcessor.cpp
gameContainerManager/lib/: CMakeLists.txt  serverProcessor.cpp
gameContainerManager/lib/include/: serverProcessor.h
gameContainerManager/test/: CMakeLists.txt  testServerProcessor.cpp
server/Game/: CMakeLists.txt
test/: CMakeLists.txt  testClient.cpp  testGame.cpp  testGameRoom.cpp  testMessageHandler.cpp  testSocialGameFileHandler.cpp
(+129 files in other folders)
